# dolfin_mech_update_direct

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  api_toc.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: index.doctree
.github/workflows/: docs.yml  run_tests.yml
Tests/: test_ball.py  test_disc.py  test_elasticity_material+loading.py  test_elasticity_multimaterial.py  test_heart_slice.py  test_homogenization.py  test_hyperelasticity_inverse.py  test_hyperelasticity_inverse_direct.py  test_hyperelasticity_loading.py  test_hyperelasticity_material.py  test_hyperelasticity_multimaterial.py  test_hyperelasticity_multisteps.py  test_microporohyperelasticity.py  test_penalty_directional_displacement.py  test_penalty_normal_displacement.py  test_porohyperelasticity.py  test_porohyperelasticity_generalized.py  test_porohyperelasticity_inverse_direct.py
_modules/: index.html
_modules/dolfin_mech/core/: compute_error.html  constraint.html  expression_meshfunction_cpp.html  foi.html  loading.html  mesh2ugrid.html  nonlinearsolver.html  qoi.html  step.html  subdomain_periodic.html  subdomain_pinpoint.html  subsol.html  timeintegrator.html  timevaryingconstant.html  write_vtu_file.html  xdmffile.html
_modules/dolfin_mech/kinematics/: inversekinematics.html  kinematics.html  linearizedkinematics.html
_modules/dolfin_mech/materials/: material.html
_modules/dolfin_mech/operators/: constraint_macroscopicstresscomponent.html  hyperelasticity.html  hyperhydrostaticpressure.html  hyperincompressibility.html  inertia.html  linearizedelasticity.html  linearizedhydrostaticpressure.html  linearizedincompressibility.html  operator.html
_modules/dolfin_mech/problems/: problem.html  problem_elasticity.html  problem_homogeneization.html  problem_hyperelasticity.html  problem_hyperelasticity_inverse.html  problem_hyperelasticity_microporo.html  problem_hyperelasticity_poro.html  problem_hyperelasticity_poro_inverse.html
_modules/dolfin_mech/runs/: ball_hyperelasticity.html  ball_mesh.html  disc_hyperelasticity.html  disc_mesh.html  heartslice_hyperelasticity.html  heartslice_mesh.html  hollowbox_homogenization.html  hollowbox_mesh.html  hollowbox_microporohyperelasticity.html  rivlincube_elasticity.html  rivlincube_hyperelasticity.html  rivlincube_mesh.html  rivlincube_porohyperelasticity.html
_static/: documentation_options.js
api/dolfin_mech/: index.html
api/dolfin_mech/core/: index.html
api/dolfin_mech/kinematics/: index.html
api/dolfin_mech/materials/: index.html
api/dolfin_mech/operators/: index.html
api/dolfin_mech/problems/: index.html
api/dolfin_mech/runs/: index.html
docs/src/: conf.py  index.md
src/dolfin_mech/: __init__.py
src/dolfin_mech/core/: FOI.py  __init__.py  loading.py  (+10 more)
(+333 files in other folders)
