[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dolfin_mech"
dynamic = ["version"]
description = "Computational mechanics with dolfin"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Martin Genet", email = "martin.genet@polytechnique.edu" },
]
license = { text = "GPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "gmsh~=4.9",
    "matplotlib~=3.5",
    "meshio~=5.3",
    "numpy~=1.23",
    "pandas~=1.3",
    "vtk~=9.2",
    "myPythonLibrary",
    "myVTKPythonLibrary",
    "vtkpython_cbl",
]

[project.urls]
"Homepage" = "https://github.com/mgenet/dolfin_mech"
"Bug Tracker" = "https://github.com/mgenet/dolfin_mech/issues"

# --- OPTIONS D'INSTALLATION ---

[project.optional-dependencies]
dev = [
    "pytest>=8.2.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1" 
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.1",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-design>=0.6.1",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-copybutton>=0.5.2",
]

# Support pour 'uv sync'
[dependency-groups]
dev = [
    "pytest>=8.2.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pre-commit>=4.5.1" 
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autoapi>=3.6.1",
    "myst-parser>=4.0.1",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-design>=0.6.1",
    "sphinx-rtd-theme>=3.1.0",
    "sphinx-copybutton>=0.5.2",
]

# --- CONFIGURATION TOOLS ---

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
# A modifier en 'src/dolfin_mech', gardez ["src"]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["Tests"]
filterwarnings = [
    "ignore::DeprecationWarning:ufl_legacy.*",
    "ignore::DeprecationWarning:pkg_resources.*",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["docs/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "D"]
ignore = ["W191", "E101", "E111", "N817", "D203", "D206", "D213", "D300"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[tool.coverage.run]
source = ["dolfin_mech"]
omit = ["Tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
]